Modified length of input fields, buttons and fixed alignment of options

--- a/spca-web/src/pages/manage-users-page.css
+++ b/spca-web/src/pages/manage-users-page.css
@@ -80,33 +80,46 @@
     justify-content: center; */
     display: inline-block;
     padding-top: 20px;
-    /* background-color: pink; */
+    /* background-color: blue; */
+    width: 100%;
 }
 
-.user-email-search {
-    width: 250px;
+.search-input {
+    width: 70%;
     height: 40px;
     font-size: 16px;
     padding: 0 20px 0 20px;
     background-color: #DBDBDB;
     border: none;
     border-radius: 20px;
+    box-sizing: border-box;
+    margin: 0;
 }
+
+/* .testing-text-field {
+    background-color: yellow;
+    width: 80%;
+    font-size: 16px;
+
+    height: 70px;
+    padding: 0 20px 0 20px;
+    border: none;
+    border-radius: 20px;
+
+    box-sizing: border-box;
+} */
+
+/* .testing-con {
+    width: 100%;
+    height: 100%;
+    background-color: purple;
+} */
 
 .type {
     width: 100%;
-    height: fit-content;
+    padding-top: 20px;
     /* background-color: red; */
-    /* font-size: 16px;
-    background-color: #DBDBDB;
-    border: none;
-    border-radius: 20px; */
-    margin-top: 20px;
-    margin-bottom: 50px;
-    /* padding: 0 20px 0 20px;
-    margin: 30px 0 30px 0; */
 }
-
 
 .search-icon {
     height: 30px;
@@ -128,7 +141,7 @@
 .type-container {
     width: 250px;
     height: 100%;
-    background-color: pink;
+    /* background-color: pink; */
     position: relative;
     display: inline-block;
 }
@@ -227,8 +240,9 @@ tr {
 
 .three-columns-grid {
     display: grid;
-    grid-template-columns: 1fr 2fr 0.5fr;
+    grid-template-columns: 1fr 1fr 1fr;
     border: #000000;
+    /* background-color: pink; */
 }
 
 .three-columns-grid > * {
@@ -236,8 +250,17 @@ tr {
     padding-right: 0;
 }
 
+.col-one {
+    /* background-color:aliceblue; */
+}
+
+.col-two {
+    /* background-color:antiquewhite; */
+}
+
 .col-three {
     text-align: right;
+    /* background-color: aqua; */
 }
 
 .dropdownbtn {
